--- a/data_processing/data_preparation.ipynb
+++ b/data_processing/data_preparation.ipynb
@@ -3627,13 +3627,105 @@
     "# Verify the change\n",
     "print(\"New max position embeddings:\", model.config.max_position_embeddings)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (4.46.0)\n",
+      "Collecting transformers\n",
+      "  Downloading transformers-4.46.2-py3-none-any.whl.metadata (44 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.1/44.1 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: filelock in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (3.14.0)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.23.2 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (0.23.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (1.26.4)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (23.2)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (2024.5.15)\n",
+      "Requirement already satisfied: requests in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (2.32.3)\n",
+      "Requirement already satisfied: safetensors>=0.4.1 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (0.4.3)\n",
+      "Requirement already satisfied: tokenizers<0.21,>=0.20 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (0.20.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from transformers) (4.66.4)\n",
+      "Requirement already satisfied: fsspec>=2023.5.0 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (2024.3.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from huggingface-hub<1.0,>=0.23.2->transformers) (4.12.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from requests->transformers) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from requests->transformers) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from requests->transformers) (2.2.1)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages (from requests->transformers) (2024.2.2)\n",
+      "Downloading transformers-4.46.2-py3-none-any.whl (10.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.0/10.0 MB\u001b[0m \u001b[31m62.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: transformers\n",
+      "  Attempting uninstall: transformers\n",
+      "    Found existing installation: transformers 4.46.0\n",
+      "    Uninstalling transformers-4.46.0:\n",
+      "      Successfully uninstalled transformers-4.46.0\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "alignscore 0.1.3 requires torch<2,>=1.12.1, but you have torch 2.5.1 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed transformers-4.46.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install --upgrade transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sled  # ** required so SLED would be properly registered by the AutoClasses **\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Tokenizer class SledTokenizer does not exist or is not currently imported.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msled\u001b[39;00m  \u001b[38;5;66;03m# ** required so SLED would be properly registered by the AutoClasses **\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModel\n\u001b[0;32m----> 3\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m AutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtau/bart-base-sled\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m AutoModel\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtau/bart-base-sled\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m inputs \u001b[38;5;241m=\u001b[39m tokenizer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello, my dog is cute\u001b[39m\u001b[38;5;124m\"\u001b[39m, return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/myenv/lib/python3.11/site-packages/transformers/models/auto/tokenization_auto.py:917\u001b[0m, in \u001b[0;36mAutoTokenizer.from_pretrained\u001b[0;34m(cls, pretrained_model_name_or_path, *inputs, **kwargs)\u001b[0m\n\u001b[1;32m    915\u001b[0m         tokenizer_class \u001b[38;5;241m=\u001b[39m tokenizer_class_from_name(tokenizer_class_candidate)\n\u001b[1;32m    916\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tokenizer_class \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 917\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    918\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTokenizer class \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtokenizer_class_candidate\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m does not exist or is not currently imported.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    919\u001b[0m         )\n\u001b[1;32m    920\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tokenizer_class\u001b[38;5;241m.\u001b[39mfrom_pretrained(pretrained_model_name_or_path, \u001b[38;5;241m*\u001b[39minputs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    922\u001b[0m \u001b[38;5;66;03m# Otherwise we have to be creative.\u001b[39;00m\n\u001b[1;32m    923\u001b[0m \u001b[38;5;66;03m# if model is an encoder decoder, the encoder tokenizer class is used by default\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: Tokenizer class SledTokenizer does not exist or is not currently imported."
+     ]
+    }
+   ],
+   "source": [
+    "import sled  # ** required so SLED would be properly registered by the AutoClasses **\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
+    "tokenizer = AutoTokenizer.from_pretrained('tau/bart-base-sled')\n",
+    "model = AutoModel.from_pretrained('tau/bart-base-sled')\n",
+    "inputs = tokenizer(\"Hello, my dog is cute\", return_tensors=\"pt\")\n",
+    "outputs = model(**inputs)\n",
+    "last_hidden_states = outputs.last_hidden_state\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (myenv)",
+   "display_name": "myenv",
    "language": "python",
-   "name": "myenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
