average vote , mistral

--- a/data_processing/data_preparation.ipynb
+++ b/data_processing/data_preparation.ipynb
@@ -3685,30 +3685,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mostah/anaconda3/envs/myenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Tokenizer class SledTokenizer does not exist or is not currently imported.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msled\u001b[39;00m  \u001b[38;5;66;03m# ** required so SLED would be properly registered by the AutoClasses **\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtransformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m AutoTokenizer, AutoModel\n\u001b[0;32m----> 3\u001b[0m tokenizer \u001b[38;5;241m=\u001b[39m AutoTokenizer\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtau/bart-base-sled\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m model \u001b[38;5;241m=\u001b[39m AutoModel\u001b[38;5;241m.\u001b[39mfrom_pretrained(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtau/bart-base-sled\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m inputs \u001b[38;5;241m=\u001b[39m tokenizer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello, my dog is cute\u001b[39m\u001b[38;5;124m\"\u001b[39m, return_tensors\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpt\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/anaconda3/envs/myenv/lib/python3.11/site-packages/transformers/models/auto/tokenization_auto.py:917\u001b[0m, in \u001b[0;36mAutoTokenizer.from_pretrained\u001b[0;34m(cls, pretrained_model_name_or_path, *inputs, **kwargs)\u001b[0m\n\u001b[1;32m    915\u001b[0m         tokenizer_class \u001b[38;5;241m=\u001b[39m tokenizer_class_from_name(tokenizer_class_candidate)\n\u001b[1;32m    916\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m tokenizer_class \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 917\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    918\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTokenizer class \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtokenizer_class_candidate\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m does not exist or is not currently imported.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    919\u001b[0m         )\n\u001b[1;32m    920\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m tokenizer_class\u001b[38;5;241m.\u001b[39mfrom_pretrained(pretrained_model_name_or_path, \u001b[38;5;241m*\u001b[39minputs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m    922\u001b[0m \u001b[38;5;66;03m# Otherwise we have to be creative.\u001b[39;00m\n\u001b[1;32m    923\u001b[0m \u001b[38;5;66;03m# if model is an encoder decoder, the encoder tokenizer class is used by default\u001b[39;00m\n",
-      "\u001b[0;31mValueError\u001b[0m: Tokenizer class SledTokenizer does not exist or is not currently imported."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sled  # ** required so SLED would be properly registered by the AutoClasses **\n",
     "from transformers import AutoTokenizer, AutoModel\n",
@@ -3718,6 +3697,55 @@
     "outputs = model(**inputs)\n",
     "last_hidden_states = outputs.last_hidden_state\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading readme: 100%|██████████| 840/840 [00:00<00:00, 7.05MB/s]\n",
+      "Downloading data: 100%|██████████| 24.8M/24.8M [00:01<00:00, 17.0MB/s]\n",
+      "Downloading data: 100%|██████████| 5.80M/5.80M [00:00<00:00, 7.40MB/s]\n",
+      "Generating train split: 100%|██████████| 2281/2281 [00:00<00:00, 8349.55 examples/s]\n",
+      "Generating validation split: 100%|██████████| 252/252 [00:00<00:00, 5799.31 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train: 2281 examples, 90.05% of the dataset\n",
+      "validation: 252 examples, 9.95% of the dataset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Load the dataset\n",
+    "# Replace 'dataset_name' with the actual name of your dataset\n",
+    "dataset = load_dataset('ahmed275/liberal_dataset_temporal')\n",
+    "\n",
+    "# Calculate the total number of examples in the dataset\n",
+    "total_size = sum(len(split) for split in dataset.values())\n",
+    "\n",
+    "# Calculate and print the percentage of each split\n",
+    "for split_name, split in dataset.items():\n",
+    "    split_size = len(split)\n",
+    "    percentage = (split_size / total_size) * 100\n",
+    "    print(f\"{split_name}: {split_size} examples, {percentage:.2f}% of the dataset\")\n"
    ]
   }
  ],
